Fix display bug with self-sourcing on small devices
Fix https://trello.com/c/0uxjQeFa/824-bug-daffichage-self-sourcing-sur-tablette

--- a/app/styles/_components/statements.sass
+++ b/app/styles/_components/statements.sass
@@ -71,6 +71,9 @@ $statement-text-color: #e0e7f1
       margin-bottom: 0
       &> .column
         max-width: 100%
+        flex-grow: 1
+        &:last-child
+          flex-grow: 20
     .speaker-preview
       padding: 0.5em 2em 0.5em 1em
       color: $dark-invert
